# paper-pipline

./: LICENSE  README.md  TEST_RESULTS.md  pipeline.example.toml  pyproject.toml
src/: cli.py  config.py  local_importer.py  pipeline.example.toml
src/download/: client.py  models.py  resolver.py  service.py
src/extract/: schema.py
src/schemas/: catalysis.json  generic.json
src/search/: pubmed.py  service.py  web_of_science.py
tests/integration/: test_cli_init.py
tests/unit/: test_config.py  test_download.py  test_extract.py  test_local_importer.py  test_search_sources.py
